# IPAClient

./: CMakeLists.txt  IPAClient.qrc  README.md
data/: readme.txt
src/: CustomMenu.cpp  CustomMenu.h  NCriticalPathItem.cpp  NCriticalPathItem.h  NCriticalPathModel.cpp  NCriticalPathModel.h  NCriticalPathModelLoader.cpp  NCriticalPathModelLoader.h  NCriticalPathParameters.cpp  NCriticalPathParameters.h  NCriticalPathReportParser.cpp  NCriticalPathToolsWidget.cpp  NCriticalPathToolsWidget.h  NCriticalPathView.cpp  NCriticalPathView.h  NCriticalPathWidget.cpp  NCriticalPathWidget.h  Path.cpp  Path.h  VprProcess.cpp  VprProcess.h  main.cpp
src/client/: ByteArrayUtils.cpp  ByteArrayUtils.h  CommConstants.h  ConvertUtils.cpp  ConvertUtils.h  GateIO.cpp  GateIO.h  RequestCreator.cpp  RequestCreator.h  TcpSocket.cpp  TcpSocket.h  TelegramBuffer.cpp  TelegramBuffer.h  TelegramFrame.h  TelegramHeader.cpp  TelegramHeader.h  TelegramParser.cpp  TelegramParser.h  ZlibUtils.cpp  ZlibUtils.h
